--- a/src_backend/views/admin/processing/main.ejs
+++ b/src_backend/views/admin/processing/main.ejs
@@ -105,31 +105,45 @@
       </form>
 
       <% if (booking.Status === 'Approved') { %>
-      <section id="update-assign-tables">
-        <button type="button" class="open-btn">
+      <section id="update-assign-tables" data-kb-tab-type="update-assign-tables">
+        <div class="update-assign-tables-title">
           <i class="bi bi-list-columns"></i>
           <span>Cập nhật danh sách bàn</span>
-        </button>
+        </div>
 
         <% if (emptyTables && emptyTables.length > 0) { %>
-        <form id="filter-tables-form" class="filter-tables-form" hidden>
-          <h2 class="filter-tables-title">Bộ lọc bàn</h2>
-
+        <form id="filter-tables-form" class="filter-tables-form">
           <div class="form-groups">
             <div class="form-group date">
               <label for="filter-tables-date-input">Ngày phục vụ</label>
-              <input type="date" id="filter-tables-date-input" name="date" value="<%= booking.date %>" <%= booking.Status === 'Completed' ? 'disabled' : '' %>>
+              <input type="date" id="filter-tables-date-input" name="date" value="<%= date %>" disabled>
               <div class="message"></div>
             </div>
             <div class="form-group time">
               <label for="filter-tables-time-input">Giờ phục vụ</label>
-              <input type="time" id="filter-tables-time-input" name="time" value="<%= booking.time %>" <%= booking.Status === 'Completed' ? 'disabled' : '' %>>
+              <input type="time" id="filter-tables-time-input" name="time" value="<%= time %>" disabled>
               <div class="message"></div>
             </div>
-            <div class="form-group people-count">
-              <label for="filter-tables-people-count-input">Số người phục vụ</label>
-              <input type="number" value="<%= booking.NumAdults + booking.NumChildren %>" id="filter-tables-people-count-input" name="people-count" <%= booking.Status === 'Completed' ? 'disabled' : '' %>>
+            <div class="form-group capacity">
+              <label for="filter-capacity-input">Sức chứa</label>
+              <input type="number" id="filter-capacity-input" name="capacity">
               <div class="message"></div>
+            </div>
+            <div class="form-group location">
+              <label>Vị trí</label>
+              <input type="text" id="filter-location-input" name="location" hidden>
+              <div class="dropdown" id="filter-location-select">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                  Chọn vị trí
+                </button>
+                <ul class="dropdown-menu">
+                  <% localtions.map(loca => { %>
+                  <li>
+                    <div class="dropdown-item" data-kb-location-status="<%= loca %>"><%= loca %></div>
+                  </li>
+                  <% }) %>
+                </ul>
+              </div>
             </div>
           </div>
 
@@ -141,7 +155,7 @@
           </div>
         </form>
 
-        <div class="restaurant-tables" hidden>
+        <div class="restaurant-tables">
           <table>
             <thead>
               <tr>
@@ -166,7 +180,7 @@
                 <% if (Status !== 'Maintenance') { %>
                 <td>
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="<%= TableID %>" id="table-pick-id-<%= TableID %>">
+                    <input class="form-check-input" <%= booking.TablesList.some(tb=>tb.TableNumber===TableNumber) ? 'checked' : '' %> type="checkbox" value="<%= TableID %>" id="table-pick-id-<%= TableID %>">
                   </div>
                 </td>
                 <% } else { %>
@@ -177,16 +191,20 @@
             </tbody>
           </table>
 
-          <div class="confirm-assign-tables">
-            <button type="button" class="escape-btn">
-              <span>Thoát</span>
-            </button>
-            <button type="button" class="submit-btn">
+          <div class="confirm-assign-tables complete-processing">
+            <button type="button" class="update-assign-tables-submit-btn" onclick="approveBooking(this)">
               <i class="bi bi-check-all"></i>
-              <span>Xác nhận hủy đơn</span>
+              <span>Xác nhận cập nhật bàn</span>
             </button>
           </div>
         </div>
+        <% } else { %>
+        <section class="empty-result">
+          <p class="empty-content">
+            <i class="bi bi-exclamation-circle"></i>
+            <span>Không có bàn trống trong vòng 12 giờ.</span>
+          </p>
+        </section>
         <% } %>
       </section>
       <% } %>
@@ -254,6 +272,12 @@
     <section class="processing">
       <ul class="nav nav-tabs">
         <li class="nav-item" role="presentation">
+          <button class="nav-link" id="cancel-tab" data-bs-toggle="tab" data-bs-target="#cancel-tab-pane" type="button" role="tab">
+            <i class="bi bi-x-lg"></i>
+            <span>Hủy đơn</span>
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
           <button class="nav-link active" id="approve-tab" data-bs-toggle="tab" data-bs-target="#approve-tab-pane" type="button" role="tab">
             <i class="bi bi-check-circle-fill"></i>
             <span>Duyệt đơn</span>
@@ -262,17 +286,41 @@
       </ul>
 
       <div class="tab-content">
+        <div class="tab-pane fade" id="cancel-tab-pane" role="tabpanel" tabindex="0" data-kb-tab-type="cancel">
+          <form class="cancel-form">
+            <div class="form-group">
+              <label for="cancel-reject-input">Lý do hủy đơn</label>
+              <textarea id="cancel-booking-input" rows="3" placeholder="Nhập lý do hủy đơn ở đây..."></textarea>
+            </div>
+          </form>
+
+          <section hidden class="processing-result">
+            <div class="result-title">
+              <i class="bi bi-exclamation-triangle-fill"></i>
+              <span>Xử lý đơn thất bại</span>
+            </div>
+            <p class="result-message"></p>
+          </section>
+
+          <div class="complete-processing">
+            <span></span>
+            <button class="submit-btn">
+              <i class="bi bi-check-all"></i>
+              <span>Hoàn tất xử lý đơn</span>
+            </button>
+          </div>
+        </div>
+
         <div class="tab-pane fade show active" id="approve-tab-pane" role="tabpanel" tabindex="0" data-kb-tab-type="approve">
           <section id="approve-booking">
             <label class="approve-booking-title">Danh sách bàn còn trống</label>
 
             <% if (emptyTables && emptyTables.length > 0) { %>
-            <form id="filter-tables-form">
-
+            <form id="filter-tables-form" action="" method="get">
               <div class="form-groups">
                 <div class="form-group date">
                   <label for="filter-tables-date-input">Ngày phục vụ</label>
-                  <input type="date" id="filter-tables-date-input" name="date" value="<%= date %>"  disabled>
+                  <input type="date" id="filter-tables-date-input" name="date" value="<%= date %>" disabled>
                   <div class="message"></div>
                 </div>
                 <div class="form-group time">
@@ -280,6 +328,34 @@
                   <input type="time" id="filter-tables-time-input" name="time" value="<%= time %>" disabled>
                   <div class="message"></div>
                 </div>
+                <div class="form-group capacity">
+                  <label for="filter-capacity-input">Sức chứa</label>
+                  <input type="number" id="filter-capacity-input" name="capacity">
+                  <div class="message"></div>
+                </div>
+                <div class="form-group location">
+                  <label>Vị trí</label>
+                  <input type="text" id="filter-location-input" name="location" hidden>
+                  <div class="dropdown" id="filter-location-select">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                      Chọn vị trí
+                    </button>
+                    <ul class="dropdown-menu">
+                      <% localtions.map(loca => { %>
+                      <li>
+                        <div class="dropdown-item" data-kb-location-status="<%= loca %>"><%= loca %></div>
+                      </li>
+                      <% }) %>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="btns">
+                <button class="submit-btn">
+                  <i class="bi bi-check-lg"></i>
+                  <span>Áp dụng bộ lọc</span>
+                </button>
               </div>
             </form>
 
@@ -343,6 +419,7 @@
             </div>
             <p class="result-message"></p>
           </section>
+
           <% if (emptyTables && emptyTables.length > 0) { %>
           <div class="complete-processing">
             <span></span>
