--- a/src_backend/views/reservation/main.ejs
+++ b/src_backend/views/reservation/main.ejs
@@ -27,10 +27,6 @@
             <i class="bi bi-currency-dollar icon"></i>
             <span>Khoảng giá <span class="price">$$$</span>: 250.000 - 350.000 đ/người</span>
           </div>
-          <div class="info-item closed">
-            <i class="bi bi-clock icon"></i>
-            <span>Mở cửa từ thứ 2 đến thứ 7 hàng tuần</span>
-          </div>
         </div>
       </div>
     </section>
@@ -60,7 +56,7 @@
         <p>- Công thức độc quyền của “nước sốt King” - được chính Bếp trưởng Park Sung Min, một trong những đầu bếp nổi tiếng nhất Hàn Quốc, với kinh nghiệm hơn 40 năm trong ngành ẩm thực, trực tiếp nghiên cứu và chế biến.</p>
       </div>
       <div class="section">
-        <h5>LIÊN LẠC NHÀ HÀNG:</h5>
+        <h5>LIÊN HỆ NHÀ HÀNG:</h5>
         <p>- Số điện thoại: 0123 456 789</p>
       </div>
     </section>
