--- a/src_backend/views/admin/all-bookings/main.ejs
+++ b/src_backend/views/admin/all-bookings/main.ejs
@@ -122,7 +122,7 @@
         <div class="booking-actions">
           <% if (Status === 'Pending') { %>
           <button type="button" class="action-btn" id="reject-booking-btn" data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>" onclick="showConfirmRejectBookingModal(event)">
-            <i class="bi bi-clipboard-check"></i>
+            <i class="bi bi-x-lg"></i>
             <span>Từ chối đơn</span>
           </button>
           <% } else if (Status === 'Arrived') { %>
@@ -143,7 +143,7 @@
           <% } %>
           <% if (Status === 'Pending' || Status === 'Approved') { %>
           <a class="action-btn" href="/admin/processing/<%= ReservationID %>">
-            <span>Cập nhật đơn</span>
+            <span>Xử lý đơn</span>
             <i class="bi bi-arrow-right-circle"></i>
           </a>
           <% } %>
@@ -365,7 +365,7 @@
         <form class="complete-form" id="confirm-complete-form">
           <div class="btns">
             <button class="submit-btn complete-btn" onclick="arrivedCustomer(event)">
-              <i class="bi bi-trash"></i>
+              <i class="bi bi-check-lg"></i>
               <span>Xác nhận khách đã đến</span>
             </button>
           </div>
