--- a/public/admin/processing/processing-page.scss
+++ b/public/admin/processing/processing-page.scss
@@ -102,6 +102,9 @@ $tab-darker-border: #dedede;
             &.completed {
                background-color: gs.$success-color;
             }
+            &.arrived {
+               background-color: #7700ff;
+            }
          }
       }
    }
