--- a/public/bookings-history/bookings-history-page.scss
+++ b/public/bookings-history/bookings-history-page.scss
@@ -113,6 +113,11 @@
                   &.approved, &.completed {
                      background-color: gs.$success-color;
                   }
+                  &.approved,
+
+            &.arrived {
+               background-color: #7700ff;
+            }
                }
             }
 
