--- a/src_backend/views/partials/page-header.ejs
+++ b/src_backend/views/partials/page-header.ejs
@@ -15,6 +15,13 @@
           <span>Danh sách đơn đặt bàn</span>
         </a>
       </li>
+
+      <li>
+        <a href="/api/admin/logout" class="nav-item" id="logout-btn">
+          <i class="bi bi-box-arrow-right"></i>
+          <span>Đăng xuất</span>
+        </a>
+      </li>
     </ul>
     <% } else { %>
     <ul>
