--- a/src_backend/views/reservation/main.ejs
+++ b/src_backend/views/reservation/main.ejs
@@ -86,7 +86,7 @@
       <div class="form-group-row">
         <div class="form-group adults-count">
           <label for="adults-count-input">Số người lớn</label>
-          <input type="number" id="adults-count-input" min="1" name="adults-count" placeholder="Số lượng khách">
+          <input type="number" id="adults-count-input" name="adults-count" placeholder="Số lượng khách">
         </div>
         <div class="form-group children-count">
           <label for="children-count-input">Số trẻ em</label>
