--- a/src_backend/views/admin/all-bookings/main.ejs
+++ b/src_backend/views/admin/all-bookings/main.ejs
@@ -84,13 +84,7 @@
           <div class="status pending">Chưa được xử lý</div>
           <% } else if (Status === 'Approved') { %>
           <div class="status approved">Đã duyệt</div>
-          <% } else if (Status === 'Cancelled') { %>
-          <div class="status cancelled">Đã hủy</div>
-          <% } else if (Status === 'Arrived') { %>
-          <div class="status arrived">Khách đã đến</div>
-          <% } else if (Status === 'Completed') { %>
-          <div class="status completed">Đã hoàn thành</div>
-          <% } else { %>
+          <% } else if (Status === 'Rejected') { %>
           <div class="status rejected">Đã từ chối</div>
           <% } %>
         </div>
@@ -102,16 +96,7 @@
           <p><strong>Ghi chú:</strong> <%= Note || "Không có" %></p>
           <p><strong>Ngày tạo đơn:</strong> <%= CreatedAt %></p>
         </div>
-        <% if ( Status === 'Rejected') { %>
-        <div class="reject-reason">
-          <strong>Lý do từ chối:</strong>
-          <% if ( reject_reason ) { %>
-          <%= reject_reason %>
-          <% } else { %>
-            Không có lý lo
-          <% } %>
-        </div>
-        <% } else if (Status === 'Approved' && TablesList && TablesList.length > 0) { %>
+        <% if (Status === 'Approved' && TablesList && TablesList.length > 0) { %>
         <div class="tables-list">
           <span>Danh sách bàn:</span>
           <% TablesList.forEach(({TableNumber},index) => {%>
@@ -125,27 +110,10 @@
             <i class="bi bi-x-lg"></i>
             <span>Từ chối đơn</span>
           </button>
-          <% } else if (Status === 'Arrived') { %>
           <button type="button" class="action-btn" id="complete-booking-btn" data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>" onclick="showConfirmCompleteBookingModal(event)">
             <i class="bi bi-clipboard-check"></i>
-            <span>Hoàn thành đơn</span>
+            <span>Duyệt đơn</span>
           </button>
-          <% } if (Status === 'Approved') { %>
-          <button type="button" class="action-btn" id="set-arrived-cus-btn" data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>" onclick="showConfirmArrivedCusModal(event)">
-            <i class="bi bi-person-fill-check"></i>
-            <span>Khách đã đến</span>
-          </button>
-          <% } if (Status === 'Approved') { %>
-          <button type="button" class="action-btn" id="cancel-booking-btn" data-kb-booking-data="<%= JSON.stringify({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,reject_reason}) %>" onclick="showConfirmCancelBookingModal(event)">
-            <i class="bi bi-trash"></i>
-            <span>Hủy đơn</span>
-          </button>
-          <% } %>
-          <% if (Status === 'Pending' || Status === 'Approved') { %>
-          <a class="action-btn" href="/admin/processing/<%= ReservationID %>">
-            <span>Xử lý đơn</span>
-            <i class="bi bi-arrow-right-circle"></i>
-          </a>
           <% } %>
         </div>
       </div>
@@ -276,7 +244,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Hoàn thành đơn</h4>
+        <h4 class="modal-title">Duyệt đơn</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
@@ -312,61 +280,9 @@
 
         <form class="complete-form" id="confirm-complete-form">
           <div class="btns">
-            <button class="submit-btn complete-btn" onclick="completeBooking(event)">
+            <button class="submit-btn complete-btn" onclick="approveBooking(event)">
               <i class="bi bi-trash"></i>
-              <span>Xác nhận hoàn thành đơn</span>
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="modal fade" id="arrived-cus-modal" tabindex="-1">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Khách hàng đã đến</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <h3 class="booking-details-title">Thông tin đặt chỗ</h3>
-        <section class="booking-details">
-          <div class="form-groups">
-            <div class="form-group full-name">
-              <label>Họ và tên người đặt</label>
-              <p></p>
-            </div>
-            <div class="form-group phone">
-              <label>Số điện thoại người đặt</label>
-              <p></p>
-            </div>
-            <div class="form-group date-time">
-              <label>Thời gian đến</label>
-              <p></p>
-            </div>
-            <div class="form-group people-count">
-              <label>Số người lớn và trẻ em</label>
-              <p></p>
-            </div>
-            <div class="form-group note">
-              <label>Ghi chú cho nhà hàng</label>
-              <p></p>
-            </div>
-            <div class="form-group created-at">
-              <label>Thời gian tạo đơn</label>
-              <p></p>
-            </div>
-          </div>
-        </section>
-
-        <form class="complete-form" id="confirm-complete-form">
-          <div class="btns">
-            <button class="submit-btn complete-btn" onclick="arrivedCustomer(event)">
-              <i class="bi bi-check-lg"></i>
-              <span>Xác nhận khách đã đến</span>
+              <span>Duyệt đơn</span>
             </button>
           </div>
         </form>
