--- a/src_backend/views/partials/page-header.ejs
+++ b/src_backend/views/partials/page-header.ejs
@@ -25,10 +25,17 @@
           <span>Đặt Chỗ</span>
         </a>
       </li>
+
       <li>
         <a href="tel:0123456789" class="nav-item">
           <i class="bi bi-telephone-fill"></i>
           <span>Liên Hệ</span>
+        </a>
+      </li>
+      <li>
+        <a href="/bookings-history" class="nav-item">
+          <i class="bi bi-search-heart"></i>
+          <span>Tra cứu đơn đặt</span>
         </a>
       </li>
     </ul>
