--- a/src_backend/views/reservation/main.ejs
+++ b/src_backend/views/reservation/main.ejs
@@ -76,7 +76,7 @@
       <div class="form-group-row">
         <div class="form-group date">
           <label for="date-input">Ngày đặt</label>
-          <input type="date" id="date-input" name="date">
+          <input type="date" id="date-input" name="date" fo>
         </div>
         <div class="form-group time">
           <label for="time-inp">Giờ đặt</label>
@@ -142,3 +142,16 @@
     </div>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script>
+  flatpickr("#date-input", {
+    dateFormat: "d/m/Y"
+  })
+  flatpickr("#time-inp", {
+    enableTime: true, // Bật chọn giờ
+    noCalendar: true, // Không cần chọn ngày, chỉ chọn giờ
+    dateFormat: "H:i", // Định dạng 12 giờ với AM/PM
+    time_24hr: true // Dùng định dạng 12 giờ với AM/PM
+  });
+</script>
