--- a/src_backend/views/admin/all-bookings/main.ejs
+++ b/src_backend/views/admin/all-bookings/main.ejs
@@ -210,9 +210,9 @@
           </div>
         </section>
 
-        <h3 class="booking-details-title mt-5">Lý do từ chối đơn</h3>
+        <!-- <h3 class="booking-details-title mt-5">Lý do từ chối đơn</h3> -->
         <form class="reject-form" id="confirm-reject-form">
-          <div class="form-groups">
+          <div class="form-groups" hidden>
             <div class="form-group">
               <label for="cancel-reject-input">Lý do từ chối đơn</label>
               <textarea id="reject-booking-input" rows="3" placeholder="Nhập lý do từ chối đơn ở đây..."></textarea>
